# rust-server-sdk-evaluation

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  coverage.sh  release-please-config.json
.circleci/: config.yml
.github/actions/build-docs/: action.yml
.github/actions/ci/: action.yml
.github/actions/publish/: action.yml
.github/actions/tooling/: action.yml
.github/variables/: rust-versions.env
.github/workflows/: check-rust-versions.yml  ci.yml  manual-publish.yml  release-please.yml
.ldrelease/: config.yml
src/: attribute_value.rs  eval.rs  flag.rs  flag_value.rs  lib.rs  rule.rs  segment.rs  store.rs  test_common.rs  test_data.rs  user.rs  util.rs  variation.rs
src/contexts/: attribute_reference.rs  context.rs  context_builder.rs  context_serde.rs  context_serde_helpers.rs  mod.rs
