[package]
name = "launchdarkly-server-sdk-evaluation"
version = "0.1.0"
authors = ["LaunchDarkly"]
edition = "2018"
excludes = [
    ".ldrelease"
]

[dependencies]
chrono = "0.4.15"
lazy_static = "1.4.0"
log = "0.4.11"
regex = "1.3.9"
serde = { version = "1.0.115", features = ["derive"] }
semver = "0.10.0"
serde_json = "1.0.57"
sha1 = { version = "0.6.0", features = ["std"] }

[dev-dependencies]
maplit = "1.0.1"
spectral = "0.6.0"
test-case = "1.2.1"
