[package]
name = "launchdarkly-server-sdk-evaluation"
description = "LaunchDarkly feature flag evaluation engine"
version = "1.0.0-beta.5"
authors = ["LaunchDarkly"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://docs.launchdarkly.com/sdk/server-side/rust"
repository = "https://github.com/launchdarkly/rust-server-sdk-evaluation"
keywords = ["launchdarkly", "feature-flags", "feature-toggles"]
exclude = [
    ".circleci",
    ".github",
    ".ldrelease",
    ".pre-commit-config.yaml",
    "coverage.sh"
]

[dependencies]
chrono = "0.4.15"
lazy_static = "1.4.0"
log = "0.4.11"
regex = "1.3.9"
serde = { version = "1.0.115", features = ["derive"] }
semver = "0.10.0"
serde_json = "1.0.57"
sha1 = { version = "0.10.1", features = ["std"] }
base16ct = { version = "0.1.1", features = ["alloc"] }

[dev-dependencies]
maplit = "1.0.1"
spectral = "0.6.0"
test-case = "2.0.0"

[features]
