[package]
name = "launchdarkly-server-sdk-evaluation"
description = "LaunchDarkly feature flag evaluation engine"
version = "1.0.0-beta.5"
authors = ["LaunchDarkly"]
edition = "2021"
rust-version = "1.60.0"
license = "Apache-2.0"
homepage = "https://docs.launchdarkly.com/sdk/server-side/rust"
repository = "https://github.com/launchdarkly/rust-server-sdk-evaluation"
keywords = ["launchdarkly", "feature-flags", "feature-toggles"]
exclude = [
    ".circleci",
    ".github",
    ".ldrelease",
    ".pre-commit-config.yaml",
    "coverage.sh"
]

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
log = "0.4.11"
regex = "1.3.9"
serde = { version = "1.0.115", features = ["derive"] }
semver = "1.0.14"
# Warning: do not enable serde_json 'arbitrary_precision' feature, as it could cause errors in context
# deserialization.
serde_json = "1.0.57"
sha1 = { version = "0.10.1", features = ["std"] }
base16ct = { version = "0.1.1", features = ["alloc"] }
urlencoding = { version = "2.1.0" }
maplit = "1.0.1"
itertools = "0.10.3"
serde_with = "2.1.0"

[dev-dependencies]
spectral = "0.6.0"
test-case = "2.0.0"
assert-json-diff = "2.0.1"
proptest = "1.0.0"
proptest-derive = "0.3.0"

[features]
# If a secondary key is present in Context data, use it when computing
# the Context's bucket. This may be enabled for backwards-compatability purposes,
# e.g. for usage in a non-SDK application, but it is otherwise unecessary as
# secondary keys cannot be set using Context builders.
secondary_key_bucketing = []
